# ChangeLog for dev-ml/xstr
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ml/xstr/ChangeLog,v 1.2 2007/02/09 02:53:04 flameeyes Exp $

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

*xstr-0.2.1 (09 Mar 2005)

  09 Mar 2005; Matthieu Sozeau <mattam@gentoo.org> +metadata.xml,
  +xstr-0.2.1.ebuild:
  xstr is a library for thread safe manipulation of strings.