@@ -1,4 +1,4 @@
 DIST xstr-0.2.1.tar.gz 14703 SHA256 796f77589af651d1bb627444fa48c76d887c97d98a58cb95913d86103fb168be SHA512 aeb518353191d48c446641937bbf78660911dd9cbb34689790777fdf47c8ab57640fd0ee04b077a74cbbe46a07bc0ef71062a1b4b7f8a627a9524ef04a03b28e WHIRLPOOL 0fed5397004a02be0e691cd097e8c36dfa5a0ef69bb1ec92f56343985bc44aacbfd68fba744dd87b7687a0deea21cab1092036c9c290af1e12904775d17f5488
-EBUILD xstr-0.2.1.ebuild 653 SHA256 e6da0bcdeb6a35a085428459017f0ae33e142bf4b2b0416c153b0177809db208 SHA512 5169f5aa361a79dc379c4b51d5e000f0ce39a9ce2385291efb92a72a05b55f5aca1264bfe1d3f4e4669f5474f0eb7b642c08b1e1b5ee54159d16d99e7c3da3b5 WHIRLPOOL 9db7479f30f1e64e4fd5f4d9c5d7d7f3a303ef87a7b647cd688d685ee1544fd2fa0148fbf0373ad88f68adaf0d41275539113aa0cf209b1a09cc6e357a1761a5
-MISC ChangeLog 480 SHA256 9104304705e4f15c5bfcc390419c9c370e9c0298551cc75aba9da009155fbab2 SHA512 afc212f24253d69e6eb15b1e89b910b1c3452387e3f037ce31bea8a2da63591607bb7e68e1591e936a30d98b74df4554f8f2869751b4b0c5fca1353a5b21110b WHIRLPOOL 92c1716619ca047d8e979127051270a816968a3e584b0753dd41499a2ce350e42fb683f0ca395e4e48f2f777d62ae4f76f5f089c6b70e618c10b1050789bc590
+EBUILD xstr-0.2.1.ebuild 655 SHA256 50bacb5df8e14c675ed97dbc2095851899bd3ca4b0eed6ebd5b7ce3b37fa4284 SHA512 dfda401d900de4d660e0dbc7311418eee0f044050f67a477055e9df07793b18dfd0ce5ec1600cddf7e6d074722402422894bc55cb7e2dd2d30b9b3f8a9c76edf WHIRLPOOL 0488c250cf64e4b9c97ea074efb0aba114ac483cf40e256ed6e6472eeae7c96dcfeae65f9c07300e347f05e9c01604ed118081e1a601b3b826c410a45aec7f0d
+MISC ChangeLog 573 SHA256 7b68a087ede24abd5e4b369f1478fe383a5c240d8e67308b5c3e017f3ed6c95c SHA512 80abac46c7e5411068f52faa6a1f77d1bb2ac2d8c7608f1d5fdca74396162e7df535a89bc495511eb4a1d0edd58566e4bf379507c5673353f7c97e4a0a6e2456 WHIRLPOOL 3ba37717e86e528e9b256cb93da65ac08a1a3c9738b5104ebf7c31923a39e6fbefd924a982b3f1efdd53c624093476494e5343ab3112027261724753a6aad217
 MISC metadata.xml 155 SHA256 118048376ebb76f57628b0819f3de4856e73959c2578c88715d37ea2d1e0af81 SHA512 a525f91dd332fc144c42d1437bdae9c889cbcece6294c2d2f4baf6a532ac2e13492736e75b41c83fac31033a9ae53c37deb96286a5ab8575611136617640952c WHIRLPOOL 71a9c7aaf4e268c65c0d1e30e343911ccbcf99ef8c23773abc2b3af8d58d9f7d5c09632805d8ba9050c09eef629f2b340db9eb9ba8b9cd2e5d655fce3f91fcb6
