@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/xstr/xstr-0.2.1.ebuild,v 1.2 2005/03/19 01:09:58 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/xstr/xstr-0.2.1.ebuild,v 1.3 2012/11/09 18:31:36 ago Exp $
 
 inherit findlib
 
@@ -13,7 +13,7 @@ SLOT="0"
 IUSE=""
 DEPEND=""
 RDEPEND="$DEPEND"
-KEYWORDS="x86 ppc"
+KEYWORDS="~amd64 ppc x86"
 S="${WORKDIR}/${PN}"
 
 src_compile()
