@@ -1,6 +1,9 @@
 # ChangeLog for dev-ml/xstr
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/xstr/ChangeLog,v 1.2 2007/02/09 02:53:04 flameeyes Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/xstr/ChangeLog,v 1.3 2012/11/09 18:31:36 ago Exp $
+
+  09 Nov 2012; Agostino Sarubbo <ago@gentoo.org> xstr-0.2.1.ebuild:
+  Add ~amd64, wrt bug #442118
 
   09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
